@@ -2,7 +2,7 @@
 <suite name="TestNG" verbose="10" object-factory="org.powermock.modules.testng.PowerMockObjectFactory">
     <test name="TestNG Skip test Bug #647">
         <classes>
-            <class name="samples.testng.powermock647.PowerMock647"/>
+            <class name="samples.testng.bugs.powermock647.PowerMock647"/>
         </classes>
     </test>
 </suite>
